Agregacion de jquery para que cargue sin internet

--- a/mysite/polls/templates/polls/product.html
+++ b/mysite/polls/templates/polls/product.html
@@ -10,9 +10,8 @@
             <a href="https://en.wikipedia.org/wiki/Django" class="external_link" id="link_to_wiki_page">
             <link rel="stylesheet" href="{% static 'css/index.css' %}">
             <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
-                                  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-
-                <script src="{% static 'js/app.js' %}"></script>
+            <script src="{% static 'js/jquery.js' %}"></script>
+            <script src="{% static 'js/app.js' %}"></script>
 
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
