--- a/mysite/polls/templates/polls/detail.html
+++ b/mysite/polls/templates/polls/detail.html
@@ -1,4 +1,4 @@
-<h1>{{ question.question_text }}</h1>
+<!--h1>{{ question.question_text }}</h1>
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
@@ -9,4 +9,96 @@
     <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
 {% endfor %}
 <input type="submit" value="Vote">
-</form>
+</form-->
+  {% load static %}
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>TecShop</title>
+
+            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+            <a href="https://en.wikipedia.org/wiki/Django" class="external_link" id="link_to_wiki_page">
+            <link rel="stylesheet" href="{% static 'css/index.css' %}">
+            <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
+            <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+            <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+            <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+            <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+            <script src="{% static 'js/app.js' %}"></script>
+
+            <meta charset="utf-8" />
+            <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
+            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+            <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <style>
+        .mySlides {display:none;}
+        </style>
+
+    </head>
+    <body>
+        <nav>
+            <div class="nav-wrapper">
+              <a href="/" class="brand-logo">TeckShop</a>
+            </div>
+        </nav>
+        <br>
+
+        <div class="container-menu">
+            <a href="#" class="btn-menu"> Menu <i class="icono fa fa-bars" aria-hidden="true"></i></a> <!--Para dispositivos moviles-->
+            <ul class='menu'>
+                <li><a href="#" class="category_item" category="all"><i class="icono izquierda fa fa-home" aria-hidden="true"></i>Inicio</a></li>
+                <li><a href="#"><i class="icono izquierda fa fa-star" aria-hidden="true"></i>Productos<i class="icono derecha fa fa-chevron-down" aria-hidden="true"></i></a>
+                    <ul>
+                        <li><a href="#" class="category_item" category="Laptops">Laptops</a></li>
+                        <li><a href="#" class="category_item" category="Camaras">Camaras</a></li>
+                        <li><a href="#" class="category_item" category="Celulares">Celulares</a></li>
+                        <li><a href="#" class="category_item" category="Televisores">Televisores</a></li>
+                        <li><a href="#" class="category_item" category="Tablets">Tablets</a></li>
+                        <li><a href="#" class="category_item" category="Sonido">Equipos de sonido</a></li>
+                    </ul>
+                </li>
+
+                <li><a href="#"><i class="icono izquierda fa fa-share-alt" aria-hidden="true"></i>Redes Sociales</a></li>
+                <li><a href="#"><i class="icono izquierda fa fa-envelope" aria-hidden="true"></i>Contactanos</a></li>
+            </ul>
+
+
+        <div class="rowq">
+            <div class="container">
+            <h5>Bootstrap 4 Search Bar</h5>
+            <div class="row">
+                <div class="col-12">
+                   <div class="input-group">
+                       <input class="form-control border-secondary py-2" type="search" value="search">
+                       <div class="input-group-append">
+                           <button class="btn btn-outline-secondary" type="button">
+                           <i class="fa fa-search"></i>
+                           </button>
+                       </div>
+                   </div>
+                </div>
+                </div>
+            </div>
+           <br>
+            <div class="column1">
+
+                <section class="products-list">
+                    {% for product in product_list %}
+                    <div class="product-item" category={{product.categoria}}>
+                        <img  src={{ product.image }}>
+                        <a >{{product.modelo}}</a>
+                        <p >{{ product.nombre }}</p>
+                        <p >S./{{ product.precio }}</p>
+                    </div>
+                    {% endfor %}
+                </section>
+            </div>
+        </div>
+    </body>
+</html>
+
