--- a/mysite/polls/static/css/estilo.css
+++ b/mysite/polls/static/css/estilo.css
@@ -190,7 +190,8 @@ a {
 }
 
 /*mapa*/
-.container-menu .map {
-	height: 400px;
-	width: 100px;
+#map {
+	height: 80px;
+	width: 80px;
+	display: flex;
 }
