--- a/mysite/polls/templates/polls/login.html
+++ b/mysite/polls/templates/polls/login.html
@@ -1,18 +1,153 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
     <head>
+        <title>TecShop</title>
+
+            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+            <a href="https://en.wikipedia.org/wiki/Django" class="external_link" id="link_to_wiki_page">
+            <link rel="stylesheet" href="{% static 'css/index.css' %}">
+            <link rel="stylesheet" href="{% static 'css/estilo.css' %}">
+            <script src="{% static 'js/jquery.js' %}"></script>
+            <script src="{% static 'js/app.js' %}"></script>
+
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+        <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
+                <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+.mySlides {display:none;}
+.button {
+    background-color: #8b0000;
+    border: none;
+    color: white;
+    padding: 15px 53px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 20px 2px;
+    cursor: pointer;
+
+}
+.collapsible {
+    background-color: #8b0000;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 50%;
+    border: none;
+    text-align: left;e.settings'
+Starting development server at http://127.0.0.1:8000/
+Quit the server with CONTROL-C.
+
+    outline: none;
+    font-size: 15px;
+    text-align: center;
+
+}
+
+.active, .collapsible:hover {
+    background-color: #8b0000;
+
+}
+
+.content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    background-color: #f1f1f1;
+    width: 48%;
+    margin-left: 26%;
+
+}
+</style>
+
+    </head>
+    <body style="text-align:center">
+        <!--div><h1><a href="/">TecShop</a></h1-->
+
         <nav>
             <div class="nav-wrapper">
-              <a href="/" class="brand-logo">TeckShop</a>
+              <a class="brand-logo" >TeckShop</a>
             </div>
         </nav><br>
+        <div>
+            <img class="mySlides" src="{% static 'images/canasta.png'  %}" style="width:20%; height:20%; padding-top:5%; margin-left: 40%;">
+        </div>
 
-</head>
-    <body>
+        <script>
+            var slideIndex = 1;
+            showDivs(slideIndex);
+
+            function plusDivs(n) {
+              showDivs(slideIndex += n);
+            }
+
+            function showDivs(n) {
+              var i;
+              var x = document.getElementsByClassName("mySlides");
+              if (n > x.length) {slideIndex = 1}
+              if (n < 1) {slideIndex = x.length}
+              for (i = 0; i < x.length; i++) {
+                 x[i].style.display = "none";
+              }
+              x[slideIndex-1].style.display = "block";
+            }
+        </script>
+        <br>
+        <br>
+        <button class="collapsible">Ingresar Cuenta</button>
+        <div class="content">
+            <form>
+              Correo electronico:<br>
+              <input type="text" name="email">
+            </form>
+
+        </div>
+        <button class="collapsible">Crear Cuenta</button>
+
+        <div class="content">
+            <form>
+              Nombre:<br>
+              <input type="text" name="firstname">
+              <br>
+              Apellido:<br>
+              <input type="text" name="lastname">
+              <br>
+              Correo electronico:<br>
+              <input type="text" name="email">
+            </form>
+        </div>
+
+
+        <script>
+        var coll = document.getElementsByClassName("collapsible");
+        var i;
+
+        for (i = 0; i < coll.length; i++) {
+          coll[i].addEventListener("click", function() {
+            this.classList.toggle("active");
+            var content = this.nextElementSibling;
+            if (content.style.display === "block") {
+              content.style.display = "none";
+            } else {
+              content.style.display = "block";
+            }
+          });
+        }
+        </script>
+
+    </br>
+    </br>
+
+        <button class="button" onclick="window.location.href='product/'" >Inicio</button>
+
 
     </body>
 </html>
-
-<style>
-.mySlides {display:none;}
-</style>
