Un cambio extraño

--- a/mysite/polls/templates/polls/product.html
+++ b/mysite/polls/templates/polls/product.html
@@ -101,6 +101,8 @@
                     </ul>
                 </li>
 
+                <li><a href="mapa/"><i class="icono izquierda fa fa-globe" aria-hidden="true"></i>Mapa</a></li>
+
                 <li><a href="#"><i class="icono izquierda fa fa-share-alt" aria-hidden="true"></i>Redes Sociales</a></li>
                 <li><a href="#"><i class="icono izquierda fa fa-envelope" aria-hidden="true"></i>Contactanos</a></li>
             </ul>
@@ -200,7 +202,7 @@
                         <a class="nombre" style="padding:2px;width: 100%;height: 50px;overflow: auto;">{{ product.nombre }}</a>
                         <a class="precios" style="text-align:center" >S./{{ product.precio }}</a>
                     </div>
-                    {% endfor %}
+                    {% endfor %}-->
 
             </section>
 
