--- a/mysite/polls/templates/polls/product.html
+++ b/mysite/polls/templates/polls/product.html
@@ -120,8 +120,6 @@
                             zoom:17,
                             center:{lat:-34.397, lng:150.644}
 
-                        
-                            
                         });
 
                     infoWindow = new google.maps.InfoWindow;
@@ -161,7 +159,7 @@
                    <div class="input-group">
                        <input id="precio" class="form-control border-secondary py-2" type="search" value="">
                        <div class="input-group-append">
-                           <!--class="btn btn-outline-secondary"-->
+                           class="btn btn-outline-secondary"-->
 
                            <button id="buscador" class="btn btn-outline-secondary" type="button" >
 
@@ -202,7 +200,7 @@
                         <a class="nombre" style="padding:2px;width: 100%;height: 50px;overflow: auto;">{{ product.nombre }}</a>
                         <a class="precios" style="text-align:center" >S./{{ product.precio }}</a>
                     </div>
-                    {% endfor %}-->
+                    {% endfor %}
 
             </section>
 
