--- a/mysite/polls/templates/polls/product.html
+++ b/mysite/polls/templates/polls/product.html
@@ -154,7 +154,7 @@
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDC3-2crD2xThv_YNA954XB1W4cxUfjtWE&callback=initMap"></script>
 
     </section>
-   <!--         <div class="container">
+            <div class="container">
             <h5>Buscar</h5>
             <div class="row">
                 <div class="col-12">
@@ -202,7 +202,7 @@
                         <a class="nombre" style="padding:2px;width: 100%;height: 50px;overflow: auto;">{{ product.nombre }}</a>
                         <a class="precios" style="text-align:center" >S./{{ product.precio }}</a>
                     </div>
-                    {% endfor %}-->
+                    {% endfor %}
 
             </section>
 
